--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\user\\.conda\\envs\\general\\python.exe"
+    "python.pythonPath": "C:\\Users\\user\\.conda\\envs\\workstation_env\\python.exe"
 }
